--- a/templates/root.html
+++ b/templates/root.html
@@ -3,6 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+
+
+    <style>
+        .auth ul.errorlist{
+            display: flex;
+            list-style-type:none;
+            color: dimgray;
+            margin-left: 0px;
+            padding-left: 10px;
+
+        }
+        .auth ul{
+            display: none;
+        }
+        .helptext{
+            display: none;
+            
+        }
+
+    </style>
 </head>
 <body>
     <div class="content">
