--- a/auth/templates/auth/sign-up.html
+++ b/auth/templates/auth/sign-up.html
@@ -1,11 +1,11 @@
 {% extends 'root.html' %}
 
 {% block content %}
-    <div class="auth sign-in">
+    <div class="auth sign-up">
         <form action="." method="post">
             {% csrf_token %}
             {{ form.as_p }}
-            <input type="submit" value="Sign-in">
+            <input type="submit" value="Sign-up">
         </form>
     </div>
 {% endblock %}
